fix Webkit z transform vs. z-index

--- a/src/assets/scss/components/_portfolio.scss
+++ b/src/assets/scss/components/_portfolio.scss
@@ -76,12 +76,12 @@
         transition: transform .2s ease-out;
 
         &:hover {
-            transform: perspective(100vh) translate3d(0, -3px, 10px);
+            transform: perspective(100vh) translate3d(0, -3px) scale(1.1);
         }
 
         &:active {
             transition: transform .1s ease-out;
-            transform: perspective(100vh) translate3d(0, -3px, -5px);
+            transform: perspective(100vh) translate3d(0, -3px, -5px) scale(1.1)
         }
 
         & > * {
